// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots MyApp/Board All Circle 1`] = `
<div>
  <div
    className="board-row"
  >
    <button
      className="square"
      e2e={0}
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      e2e={1}
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      e2e={2}
      onClick={[Function]}
    >
      O
    </button>
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      e2e={3}
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      e2e={4}
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      e2e={5}
      onClick={[Function]}
    >
      O
    </button>
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      e2e={6}
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      e2e={7}
      onClick={[Function]}
    >
      O
    </button>
    <button
      className="square"
      e2e={8}
      onClick={[Function]}
    >
      O
    </button>
  </div>
</div>
`;

exports[`Storyshots MyApp/Board All Triangle 1`] = `
<div>
  <div
    className="board-row"
  >
    <button
      className="square"
      e2e={0}
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      e2e={1}
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      e2e={2}
      onClick={[Function]}
    >
      △
    </button>
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      e2e={3}
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      e2e={4}
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      e2e={5}
      onClick={[Function]}
    >
      △
    </button>
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      e2e={6}
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      e2e={7}
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      e2e={8}
      onClick={[Function]}
    >
      △
    </button>
  </div>
</div>
`;

exports[`Storyshots MyApp/Board All X 1`] = `
<div>
  <div
    className="board-row"
  >
    <button
      className="square"
      e2e={0}
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      e2e={1}
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      e2e={2}
      onClick={[Function]}
    >
      X
    </button>
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      e2e={3}
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      e2e={4}
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      e2e={5}
      onClick={[Function]}
    >
      X
    </button>
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      e2e={6}
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      e2e={7}
      onClick={[Function]}
    >
      X
    </button>
    <button
      className="square"
      e2e={8}
      onClick={[Function]}
    >
      X
    </button>
  </div>
</div>
`;

exports[`Storyshots MyApp/Board Default Board 1`] = `
<div>
  <div
    className="board-row"
  >
    <button
      className="square"
      e2e={0}
      onClick={[Function]}
    />
    <button
      className="square"
      e2e={1}
      onClick={[Function]}
    />
    <button
      className="square"
      e2e={2}
      onClick={[Function]}
    />
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      e2e={3}
      onClick={[Function]}
    />
    <button
      className="square"
      e2e={4}
      onClick={[Function]}
    />
    <button
      className="square"
      e2e={5}
      onClick={[Function]}
    />
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      e2e={6}
      onClick={[Function]}
    />
    <button
      className="square"
      e2e={7}
      onClick={[Function]}
    />
    <button
      className="square"
      e2e={8}
      onClick={[Function]}
    />
  </div>
</div>
`;
